# archipel-monorepo

./: pyproject.toml  research_proposal.doc
base_workflow/: draw_graph.py  hierarchical.py  main.py  main_streamlit.py  two_agent_debate_tools.ipynb  workflow.py
base_workflow/agents/: __init__.py  agent_test.py  aggressive_agent.py  bearish_researcher.py  bullish_researcher.py  chart_generating_agent.py  conservative_agent.py  crypto_manager.py  data_agent.py  doc_writer_agent.py  financial_analyst_agent.py  fundamentals_analyst.py  market_analyst.py  neutral_agent.py  news_analyst.py  note_taking_agent.py  real_time_data_agent.py  reporter.py  risk_management_agent.py  sentiment_analyst_agent.py  social_media_analyst.py  technical_analyst_agent.py  trader.py  webscraper_agent.py  writing_agent.py
base_workflow/nodes/: __init__.py  aero_multi_round.py  agent_node.py  aggressive_agent_node.py  bearish_researcher_node.py  bullish_researcher_node.py  chart_generating_node.py  conservative_agent_node.py  crypto_manager_node.py  data_agent_node.py  doc_writing_node.py  financial_analyst_agent_node.py  fundamentals_analyst_node.py  market_analyst_node.py  neutral_agent_node.py  news_analyst_node.py  note_taking_node.py  real_time_data_agent_node.py  reporter_node.py  risk_management_agent_node.py  sentiment_analyst_agent_node.py  social_media_analyst_node.py  technical_analyst_agent_node.py  trader_node.py  web_scraper_node.py  writing_agent_node.py
base_workflow/outputs/: Evaluating_Oil_Stocks_Outline.txt  Poem_About_Cats.txt  writing_agent_output.txt
(+16 files in other folders)
