[tool.poetry]
name = "base-workflow"
version = "0.1.0"
description = ""
authors = ["Tai Zhang <ge23wut[at]mytum.de>","Lukas Beckenbauer <lukas.beckenbauer[at]tum.de>", "Mel Grosser <grosser.mel[at]live.de>"]
readme = "README.md"

[tool.poetry.scripts]
draw_graph = "base_workflow.draw_graph:main"
main = "base_workflow.main:main"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.59"
langsmith = "^0.1.147"
langchain-core = "^0.3.24"
langchain = "^0.3.11"
langchain-openai = "^0.2.12"
langchain-experimental = "^0.3.3"
langchain-community = "^0.3.11"
langchain-text-splitters="0.3.2"
langgraph-checkpoint="2.0.9"
langgraph-sdk="0.1.44"
groq = "^0.12.0"
tiktoken = "^0.8.0"
langchainhub = "^0.1.21"
chromadb = "^0.6.2"
beautifulsoup4 = "^4.12.3"
pypdf = "^5.1.0"
streamlit = "^1.41.1"
markdown2 = "^2.5.3"
weasyprint = "^65.0"
arxiv = "^2.1.3"
duckduckgo-search = "^2025.4.4"
wikipedia = "^1.4.0"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
